<resources>
    <string name="app_name">Booksoul</string>
    <string name="title_home">Explore</string>
    <string name="title_dashboard">Search</string>
    <string name="title_notifications">Saved</string>
    <string name="toast_language">English selected</string>
    <string name="home_justforyou">Just for you</string>
    <string name="home_content_just">Content made just for you</string>
    <string name="select_language">Select Your Language</string>
    <string name="language_changeafter">You can change this while viewing the content or in settings</string>
    <string name="articles">Articles</string>
    <string name="dailyarticle">Daily dose of Content</string>
    <string name="home_intresting">Inspire Me</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="language_preference">Choose</string>
    <string name="next">NEXT</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="forget_password">Forget Password?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="new_user_sign_up">New User? SIGN UP</string>
    <string name="more">more</string>
    <string name="home_podcasts">Podcasts</string>
    <string name="listen">Listen</string>
    <string name="read">Read</string>
    <string name="read_offline_books">Offline books</string>
    <string name="save_this_content">Save this content</string>
    <string name="share_this_content">Share this content</string>
    <string name="tab_article">Articles</string>
    <string name="tab_inspire">Inspire Me</string>
    <string name="tab_quicks">Quicks</string>
    <string name="tab_publishers">Publishers</string>
    <string name="your_language">your language</string>
    <string name="choose">Choose</string>
    <string name="your_preference">your preference</string>
    <string name="language">Language</string>
    <string name="preference">Preference</string>
    <string name="done">Done</string>
    <string name="not_yet_registered">Not yet registered! <b>Register now</b></string>
    <string name="facebook_app_id" translatable="false">626696924663617</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb626696924663617</string>
    <string name="content" translatable="false">
quickly become a daunting task. That’s why you should
find a trust
ed person you can ask for suggestions.
Knowing whom to ask for book recommendations is a
crucial skill. The right recommendation can open up a
huge world of possibilities and insights. Find a friend
who knows you really well (and has a diverse reading
lis
t!) and ask them to recommend something they think
you’d like. Tell them about movies you like to watch,
issues or topics you care about, and other ways you
like to relax and unwind. If they know you love being
outdoors, they may recommend John Muir’s My F
irst
Summer in the Sierra. More of a People Magazine person?
Kevin Kwan’s Crazy Rich Asians could be right up your
alley.
Of course, if you don’t know someone that can fill this
role, you can always consult a Bibliologist.
LOOK FOR PAGE
-
TURNERS
If it see
ms books have a hard time holding your
attention, find a book with short chapters or a lot of
cliffhangers to keep your interest. Sassy action
-
thrillers like Janet Evanovich’s Stephanie Plum series
cut right to the core of the plot. The Martian by Andy
Wei
r is as hilarious as it is fast
-
paced and readable.
Short chapters and cliffhangers do not indicate a book
of “lesser” value. They simply indicate the author
knows how to keep you guessing and keep you reading. If
you want to keep reading, you need to stay
interested.
And if you still have a hard time staying focused, you
can read 1
–
2 chapters at a time. You’ll make progress
on the book without feeling like you’re stuck on a
chapter that just won’t end.
DON’T BE AFRAID TO READ YA
YA stands for “young adul
t,” or, more precisely, novels
written for people between the ages of 12 and 18 years
old. Despite the age range of their intended audience,
anyone of any age can read YA books and enjoy them.
As Abby Hargreaves recently wrote for Book Riot, YA
novels hav
e a much broader appeal than to just
teenagers. Just because they’re geared to younger
readers, doesn’t mean they’re juvenile. On the
contrary, many YA novels gracefully tackle serious
issues, such as police brutality (Angie Thomas’s The
Hate U Give), or s
exuality (the queer space age
retelling of the King Arthur myth, Once and Future by
Amy Rose Capetta and Cori McCarthy).
YA fiction is often equally silly and serious. It tends
to be shorter than adult fiction, and easier to read.
For recommendations on ho
w to start reading YA, check
out this list of books.
LISTEN TO AUDIOBOOKS
If you struggle with the sitting and focusing required
to read a physical book, or don’t have the time,
consider listening to audiobooks. Audiobooks are a
great way to make mundane
tasks, like chores or a daily
commute, more enjoyable. Even better, many audiobooks
are available for free through your local library
through apps like Hoopla, Libby, and Overdrive.
A pro tip for finding an audiobook you like: find a
narrator you like. F
amous actors will often perform
audiobooks. If The Handmaid’s Tale or Tom Sawyer have
always intimidated you, hearing Claire Danes or Nick
Offerman (AKA Parks and Recreation‘s Ron Swanson)
narrate may add another layer of interest to your
listening. Plus,
many celebrities narrate their own
memoirs. If you love Tiffany Haddish, it is more than
worth it to hear her read The Last Black Unicorn.
TAKE ADVANTAGE OF BOREDOM
While you may think you don’t have time to read, there
may be some blank edges in your da
y where having a book
could come in handy. A daily commute on the train,
doctor’s appointments, waiting for your kids to finish
up soccer practice, are all opportunities to sneak in
some reading. Thanks to COVID
-
19, you are likely more
bored than ever. Why
not use that extra time to squeeze
in some reading?
This is where audiobooks and ebooks come in handy.
While you may not be used to lugging around Anna
Karenina, you likely carry around a smart phone pretty
much all of the time. Having a few ebooks or au
diobooks
preloaded onto your phone can help keep you engaged and
informed at all times.</string>
    <string name="nothing_saved_yet">Nothing saved yet!!!</string>
    <string name="curated_just_for_you">Curated just for you</string>
    <string name="home">Home</string>
    <string name="choose_any_five">Choose any five</string>
    <string name="categories">Categories</string>
    <string name="just_updated">Just Updated</string>
</resources>