<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".main.wishlist.WishlistFragment">

    <ImageView
        android:id="@+id/image_nonsaved"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerInside"
        android:layout_centerInParent="true"
        android:src="@drawable/notsaved"
        android:visibility="visible" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nothing_saved_yet"
        android:layout_marginTop="20dp"
        android:textSize="16dp"
        android:fontFamily="@font/opensans_regular"
        android:gravity="center"
        android:layout_below="@id/image_nonsaved"
        android:id="@+id/text_nonsaved"/>
    <androidx.core.widget.NestedScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:overScrollMode="never"

        android:clipToPadding="true"
        android:paddingBottom="90dp"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/linearw"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/tecta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/articles"
            android:textSize="22dp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ArticleRecyc"
            android:layout_width="match_parent"
            android:clipToPadding="true"
            android:nestedScrollingEnabled="false"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tecti"
            android:layout_marginTop="20dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_semibold"
            android:layout_marginStart="15dp"

            android:text="@string/home_intresting"
            android:textSize="22dp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/InspireRecyc"
            android:layout_width="match_parent"
            android:clipToPadding="true"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tectp"
            android:layout_marginTop="20dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_semibold"
            android:layout_marginStart="15dp"

            android:text="@string/home_podcasts"
            android:textSize="22dp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/PodcastRecyc"
            android:layout_width="match_parent"
            android:clipToPadding="true"
            android:nestedScrollingEnabled="false"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tectq"
            android:layout_marginTop="20dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_semibold"
            android:layout_marginStart="15dp"

            android:text="@string/tab_quicks"
            android:textSize="22dp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/QuicksRecyc"
            android:layout_width="match_parent"
            android:clipToPadding="true"
            android:nestedScrollingEnabled="false"
            android:layout_height="match_parent" />

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/tectpub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_semibold"
            android:layout_marginStart="15dp"

            android:text="@string/tab_publishers"
            android:textSize="22dp"
            android:visibility="invisible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/PublisherRecyc"
            android:clipToPadding="true"
            android:nestedScrollingEnabled="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>