<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="#fff"

    tools:context=".preference.LanguageActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/opensans_regular"
            android:layout_alignParentStart="true"
            android:text="@string/language"/>
        <TextView
            android:fontFamily="@font/opensans_regular"

            android:id="@+id/pref"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preference"/>
        <TextView
            android:id="@+id/done"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/opensans_regular"

            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"/>



        <SeekBar
            android:id="@+id/prefr_seek"
            android:layout_below="@id/pref"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:tickMarkTint="@color/COMPANYCOLOR"
            android:indeterminateTint="@color/COMPANYCOLOR"
            android:layout_height="wrap_content"
            android:max="4" />


        <fragment
            android:id="@+id/fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/prefr_seek"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="5dp"

            app:defaultNavHost="true"
            app:navGraph="@navigation/preference_selection_nav" />

    </RelativeLayout>
</ScrollView>