<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".main.listen.ListenFragment">
    <androidx.core.widget.NestedScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"

        android:overScrollMode="never"

        android:clipToPadding="false"
        android:paddingBottom="90dp"

        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/linearw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">
        <TextView
            android:id="@+id/tectcatagory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"

            android:layout_marginStart="15dp"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/categories"
            android:textColor="#000"
android:textStyle="bold"
            android:textSize="18dp"
            android:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/CategoryRecyc"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:paddingEnd="15dp"
            android:layout_width="match_parent"
            android:nestedScrollingEnabled="false"
            android:layout_height="match_parent" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E4E4E4"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"/>
    <TextView
        android:id="@+id/tecta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/curated_just_for_you"
        android:textColor="#000"
android:textStyle="bold"
        android:textSize="20dp"
        android:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/CuratedRecyc"
        android:layout_width="match_parent"
        android:clipToPadding="false"
        android:overScrollMode="never"

        android:paddingEnd="15dp"
        android:nestedScrollingEnabled="false"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/tecti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_regular"
        android:layout_marginStart="15dp"
        android:textColor="#000"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp"

        android:textStyle="bold"
        android:text="@string/just_updated"
        android:textSize="20dp"
        android:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/UpdatedRecyc"
        android:layout_width="match_parent"
        android:overScrollMode="never"

        android:clipToPadding="false"
        android:paddingEnd="15dp"
        android:layout_height="match_parent" />
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>