<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:scrollbars="none"
    tools:context=".preference.LanguageFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_marginTop="50dp"
        android:paddingBottom="8dp"

        android:layout_width="match_parent"
        android:layout_height="600dp"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/choose"

                android:textColor="@color/MainColor"
                android:textSize="42dp" />

            <TextView
                android:id="@+id/options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textSelect"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/your_language"
                android:textColor="#636363"
                android:textSize="35dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="2dp"
                android:id="@+id/ln"
                android:layout_weight="2"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="2dp"
                android:orientation="horizontal">

                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent" android:layout_height="70dp"
                    android:layout_marginTop="10dp"
                    android:background="#fff"

                    android:elevation="5dp"
                    android:layout_weight="1"
                    android:translationY="-10dp"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:id="@+id/english">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:id="@+id/image"
                        android:src="@drawable/english_icon"
                        android:layout_alignParentStart="true"/>

                    <TextView
                        android:id="@+id/text"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_toEndOf="@+id/image"
                        android:paddingStart="1dp"
                        android:paddingEnd="10dp"
                        android:fontFamily="@font/opensans_regular"
                        android:gravity="center_vertical"
                        android:text="  English"
                        android:textSize="20dp" />

                </RelativeLayout>
                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent" android:layout_height="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:elevation="5dp"
                    android:translationY="-10dp"
                    android:background="#fff"

                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:id="@+id/hindi">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/hindi_icon"
                        android:id="@+id/image2"
                        android:layout_alignParentStart="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_toEndOf="@+id/image2"
                        android:paddingStart="1dp"
                        android:paddingEnd="10dp"
                        android:fontFamily="@font/opensans_regular"
                        android:gravity="center_vertical"
                        android:text="    हिन्दी"
                        android:textSize="20dp" />

                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/explore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:translationY="-10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:enabled="false"
            android:background="@drawable/button_state"
            android:elevation="4dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/next"
            android:textColor="@color/MainColor" />


    </RelativeLayout>

</ScrollView>